--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 body{
   padding:0;
   margin:0;
-  background-image:url('/Users/kutlwano/Desktop/CREATIVES HUB/image /home.jpg');
+  background-image:url ('/img/home.jpg');
 
 }
 h1{
