--- a/Photographers.html
+++ b/Photographers.html
@@ -39,7 +39,7 @@
     <div class="container" >
     <div class="row">
     <div class="col-sm">
-      <a href="https://www.artsy.net/artist/guy-tillim"><img src="/Users/kutlwano/Desktop/CREATIVES HUB/image /Guy Tillim.jpg"width="300" height="300" align="left" title="Guy Tillim"alt="Guy Tillim"></a>
+      <a href="https://www.artsy.net/artist/guy-tillim"><img src="/image /Guy Tillim.jpg"width="300" height="300" align="left" title="Guy Tillim"alt="Guy Tillim"></a>
       <h3 align="left">Guy Tillim </h3>
       <p>Guy Tillim is an photographer that focuses on the concepts of Africas social and political terrain,capturing child soldiers in the Congo, refugees in Angola, and urban life in Johannesburg.Not only does he capture quiter scene-in post offices,schools, and hotels.</p>
       <p>In his series "Avenue Patrice Lumumba",Tillim documented the many streets in Africa named after Patrice Lumumba,one of the continents first elected African leaders of modern times.</p>
@@ -47,7 +47,7 @@
       <p><b>Click on the image to view portfolio</b></p>
     </div>
     <div class="col-sm">
-      <a href="https://www.artsy.net/artist/zanele-muholi"><img src="/Users/kutlwano/Desktop/CREATIVES HUB/image /zanele_muholi_.jpg "width="300" height="300" align="left" title="Zanele Muholi "alt=" Zanele Muholi Porfolio"></a>
+      <a href="https://www.artsy.net/artist/zanele-muholi"><img src="/image /zanele_muholi_.jpg "width="300" height="300" align="left" title="Zanele Muholi "alt=" Zanele Muholi Porfolio"></a>
 
     <h3 align="center"> Zanele Muholi </h3>
     <p>Muholi is a visual activist, humanitarian and photographer born in Umlazi,
