--- a/Artists.html
+++ b/Artists.html
@@ -40,7 +40,7 @@
       <div class="container"  >
       <div class="row">
       <div class="col-sm">
-        <a href="https://artthrob.co.za/artist/lady-skollie/"><img src="/Users/kutlwano/Desktop/CREATIVES HUB/image /Lady Skollie.jpg"width="300" height="300" align="left" title="Lady Skollie"alt="Lady Skollie Porfolio"></a>
+        <a href="https://artthrob.co.za/artist/lady-skollie/"><img src="/image /Lady Skollie.jpg"width="300" height="300" align="left" title="Lady Skollie"alt="Lady Skollie Porfolio"></a>
         <h3 align="center"> Lady Skollie </h3>
         <p>Lady Skollie is an artist that focuses on the concepts of gender and consent in South Africa.</p>
         <p>Through her pseudonym and artistic personality,Lady Skollie aims to create an angency in which she communicates
@@ -50,7 +50,7 @@
         <p><b>Click on the image to view their portfolio</b></p>
       </div>
       <div class="col-sm">
-        <a href="https://www.artsy.net/artist/nelson-makamo"><img src="/Users/kutlwano/Desktop/CREATIVES HUB/image /NelsonMakamo 2.png"width="300" height="300" align="left" title="Nelson Makamo "alt="Nelson Makamo Portfolio"></a>
+        <a href="https://www.artsy.net/artist/nelson-makamo"><img src="/image /NelsonMakamo 2.png"width="300" height="300" align="left" title="Nelson Makamo "alt="Nelson Makamo Portfolio"></a>
 
       <h3 align="center"> Nelson Makamo </h3>
       <p>Nelson Makamo is a Johannesburg based artist.He was born in 1982, in a town called Modimolle in South Africa's Limpopo province.</p>
@@ -62,7 +62,7 @@
 
       </div>
       <div class="col-sm">
-      <a href="https://nuweland.nl/en/gallery/daniella-mooney/">  <img src="/Users/kutlwano/Desktop/CREATIVES HUB/image /DaniellaMooney.jpg"width="300" height="300" align="right" title="Daniella Mooney" alt="Daniella Mooney Portfolio"></a>
+      <a href="https://nuweland.nl/en/gallery/daniella-mooney/">  <img src="/image /DaniellaMooney.jpg"width="300" height="300" align="right" title="Daniella Mooney" alt="Daniella Mooney Portfolio"></a>
         <h3 align="center"> Daniella Mooney </h3>
         <p>Daniella Mooney is an artist that works across multiple mediums such as painting, sculpture and installation.She is currently based in Berlin</p>
         <p>She studied a BA Fine Art at Michaelis School of Fine Art, at the University of Cape Town South Africa. </p>
