--- a/Aboutus.html
+++ b/Aboutus.html
@@ -33,7 +33,7 @@
 <hr/>
 <style>
   body{
-    background-image:url('/Users/kutlwano/Desktop/CREATIVES HUB/image /pexels-karolina-grabowska-4207780.jpg');
+    background-image:url('/image /pexels-karolina-grabowska-4207780.jpg');
   }
 </style>
 
@@ -42,7 +42,7 @@
   <h1 align="center">About us</h1>
 <p align="center">Creatives Hub is a project that provides creatives with the platform of showing their art pieces through an online digital site that is seen by curators and art enthusiasts who are interested in seeing emerging artists becoming a success. Creative’s hub aim is to provide creatives with an opportunity of improving their careers. This is done through curators or customers looking through their portfolio and information to clarify how good the artist is. The consumer then decides whether they would like to offer them a job, solo exhibition/to be a part of a main exhibition, or perhaps take pictures or a portrait of the consumer.
 </p>
-<center><img src="/Users/kutlwano/Desktop/CREATIVES HUB/image /art piece 1.jpg"width="300" height="300" align="center" title="Abou Creatives Hub" alt="About Creatives Hub">
+<center><img src="/image /art piece 1.jpg"width="300" height="300" align="center" title="Abou Creatives Hub" alt="About Creatives Hub">
 
 
 </body>
